# traceflow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.claude/: launch.json
.claude/skills/adapter-pattern/: SKILL.md
.claude/skills/client-onboarding/: SKILL.md
.claude/skills/content-creation/: SKILL.md
.claude/skills/context-sync/: SKILL.md
.claude/skills/fastapi-supabase/: SKILL.md
.claude/skills/marketing-copy/: SKILL.md
.claude/skills/multi-tenant-arch/: SKILL.md
.claude/skills/prompt-engineering/: SKILL.md
.github/workflows/: ci.yml
admin-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin-ui/src/: App.tsx  Login.tsx  Shell.tsx  api.ts  index.css  labels.ts
admin-ui/src/panels/: ActivityPanel.tsx  ConfigPanel.tsx  LeadsPanel.tsx  MappingsPanel.tsx  QualificationEditor.tsx  UsageCard.tsx
docs/: CHANGELOG.md  PRD.md  admin-ui-audit.md  architecture.md  retool-notes.md  timeline-30-90.md  workflow-schema.md  workflow-tracker.md
docs/decisions/: 0001-multi-tenant-shared-db-with-rls.md  0002-caller-classification-runtime.md  0003-recovered-revenue-attribution.md  0004-self-hosted-admin-api.md  0005-contact-identity-and-config-driven-qualification.md
docs/playbooks/: discovery-call.md  linkedin-outreach.md  new-client-onboarding.md
migrations/: 001_create_clients_and_configs.sql  002_create_client_field_mappings.sql  003_create_client_webhook_configs.sql  004_create_leads_messages_events.sql  005_create_kb_tables.sql  006_create_audit_log.sql  007_create_sync_log.sql  008_create_user_permissions.sql  009_create_calculator_tables.sql  010_force_rls_on_tenant_tables.sql  011_null_safe_tenant_policies.sql  012_add_is_test_to_leads.sql  013_add_classification_config_to_client_configs.sql  014_add_classification_to_leads.sql  015_add_intent_statuses_to_leads.sql  016_add_outcome_and_revenue_config.sql  017_create_admin_users.sql  018_create_contacts.sql  019_lead_conversation_state.sql  020_add_qualification_schema.sql  021_add_ack_templates.sql  025_add_closing_templates.sql  026_add_lead_crm_external_id.sql
scripts/: apply_migrations.py  create_admin.py  dev_admin_preview.py  export_contacts.py  inspect_monday_board.py  onboard_client.py
src/app/: __init__.py  config.py  db.py  main.py
src/app/adapters/: __init__.py  base.py  ghl.py  hubspot.py  monday.py  registry.py
src/app/demo/: __init__.py  fake_conn.py  fixtures.py
src/app/jobs/: adapter_health.py  daily_digest.py  monthly_report.py  revenue_sync.py
src/app/middleware/: auth.py  signature_verify.py  tenant_resolver.py
src/app/models/: __init__.py  client.py  client_config.py  contact.py  crm_contact.py  event.py  kb.py  lead.py  message.py  qualification.py
src/app/prompts/: __init__.py  context.py  greeting.py  intent.py  qualifier.py  summarize.py
src/app/routers/: admin.py  calculator.py  demo.py  kb.py  kb_export.py
src/app/routers/admin/: __init__.py  activity.py  auth.py  clients.py  contacts.py  leads.py  mappings.py  schemas.py
src/app/services/: admin_auth.py  ai.py  audit.py  calculator.py  classification.py  contacts.py  dedupe.py  field_mappings.py  notifications.py  owner_alert.py  permissions.py  phone.py  qualification.py  sms.py  spam.py  twilio_signature.py  webhook_signature.py
src/app/static/admin/: index.html
src/app/static/admin/assets/: index--IBrC1pX.js  index-B0Sux6_i.css  index-BNaFc6dh.css  index-BXULnrLp.js  index-BqYkW19p.css  index-CBFDB757.css  index-Cft75yAM.js  index-DAzHd5eb.css  index-DTzd72YR.js  index-DhNuFRwu.js  index-Dj1tqy8b.css  index-DzhEVjsB.js  index-i3qLi7i0.js  index-j6oVRfT6.css
src/app/webhooks/: crm.py  generic.py  shopify.py  twilio.py
tests/: conftest.py  test_admin.py  test_dedupe.py  test_demo.py  test_generic_webhook.py  test_golden_conversations.py  test_lead_model.py  test_tenant_isolation.py  test_tenant_resolver.py  test_twilio.py  test_webhook_signature.py
tests/adapters/: test_ghl_adapter.py  test_hubspot_adapter.py  test_monday_adapter.py
tests/fixtures/conversations/: max_turns.json  out_of_area.json  qualified.json  returning_prior_project.json
tests/jobs/: test_daily_digest.py  test_monthly_report.py  test_revenue_sync.py
tests/prompts/: test_context.py  test_greeting.py  test_intent.py  test_qualifier.py  test_summarize.py
tests/scripts/: test_export_contacts.py
tests/services/: test_admin_auth.py  test_calculator.py  test_classification.py  test_contact_resolver.py  test_contacts.py  test_field_mappings.py  test_owner_alert.py  test_phone.py  test_qualification.py  test_spam.py
tests/sql/: bootstrap_supabase_stubs.sql
tests/webhooks/: test_twilio_crm_push.py
