[project]
name = "traceflow"
version = "0.1.0"
description = "TraceFlow — productized AI automation platform for SMB service businesses"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "supabase>=2.10.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "pyjwt[crypto]>=2.10.0",
    "cryptography>=43.0.0",
    "structlog>=24.4.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.1",
    "jsonpath-ng>=1.6.1",
    "sentry-sdk[fastapi]>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "jsonpath_ng.*"
ignore_missing_imports = true
